--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.8",
         "laraveldaily/laravel-invoices": "^3.1",
         "league/flysystem-aws-s3-v3": "^3.0",
+        "malzariey/filament-daterangepicker-filter": "^2.8",
         "saade/filament-fullcalendar": "^3.0"
     },
     "require-dev": {
