--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "archilex/filament-toggle-icon-column": "^3.1",
         "edwink/filament-user-activity": "^1.0",
         "filament/filament": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
@@ -18,7 +19,8 @@
         "laraveldaily/laravel-invoices": "^3.1",
         "league/flysystem-aws-s3-v3": "^3.0",
         "malzariey/filament-daterangepicker-filter": "^2.8",
-        "saade/filament-fullcalendar": "^3.0"
+        "saade/filament-fullcalendar": "^3.0",
+        "tomatophp/filament-notes": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
