--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "league/flysystem-aws-s3-v3": "^3.0",
         "malzariey/filament-daterangepicker-filter": "^2.8",
         "saade/filament-fullcalendar": "^3.0",
+        "stechstudio/filament-impersonate": "^3.16",
         "tomatophp/filament-notes": "^1.0"
     },
     "require-dev": {
